# aurora

./: README.md
crash_exploration/: README.md  crash_exploration.patch
docker/: Dockerfile  build.sh  entrypoint.sh  pull.sh  run.sh
docker/example_scripts/: 01_afl.sh  02_tracing.sh  03_rca.sh
root_cause_analysis/: Cargo.toml
root_cause_analysis/predicate_monitoring/: Cargo.toml
root_cause_analysis/predicate_monitoring/src/: assembler.rs  lib.rs  monitor.rs  predicate.rs  register.rs  rflags.rs
root_cause_analysis/root_cause_analysis/: Cargo.toml
root_cause_analysis/root_cause_analysis/src/: addr2line.rs  config.rs  lib.rs  main.rs  monitor.rs  rankings.rs  traces.rs  utils.rs
root_cause_analysis/trace_analysis/: Cargo.toml
root_cause_analysis/trace_analysis/src/: config.rs  control_flow_graph.rs  debug.rs  lib.rs  main.rs  predicate_analysis.rs  predicate_builder.rs  predicate_synthesizer.rs  predicates.rs  trace.rs  trace_analyzer.rs  trace_integrity.rs
tracing/: README.md  aurora_tracer.cpp  makefile.rules
tracing/scripts/: addr_ranges.py  pprint.py  run_tracer.sh  tracing.py
