[package]
name = "predicate_monitoring"
version = "0.1.0"
authors = ["Simon Wörner <git@simon-woerner.de>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 3

[dependencies]
trace_analysis = { path = "../trace_analysis" }
nix = "^0.15"
ptracer = { git = "https://github.com/SWW13/ptracer.git", rev = "786fce1ddf8b107c65921f9f5e3caecc496ff233" }
zydis = "^3.0"
nom = "^5.0"
bitflags = "^1.2"
serde_json = "^1.0"
log = "^0.4"
env_logger = "^0.7"

[[bin]]
name = "monitor"
path = "src/monitor.rs"