[package]
name = "trace_analysis"
version = "0.1.0"
authors = ["Tim Blazytko <tim@blazytko.to>", "Moritz Schlögel <moritz.schloegel@rub.de>"]
edition = "2018"

[profile.release]
lto = true

[dependencies]
glob="*"
rayon="*"
serde = { version = "*", features = ["derive"] }
serde_json="*"
structopt="*"
zip = "*"
rand="*"